--- a/app/proconarumbills/webapp/i18n/i18n.properties
+++ b/app/proconarumbills/webapp/i18n/i18n.properties
@@ -9,3 +9,14 @@ appTitle=Proconarum Bills
 appDescription=An SAP Fiori application.
 #XTIT: Main view title
 title=Proconarum Bills
+filterBarDescription=Request ID
+Description=Description
+filterBarCreatedBy=Created By
+createdBy=createdBy
+filterBarChangedBy=Changed By
+changedBy=changedBy
+filterBarApprovedBy=Approved By
+approvedBy=approvedBy
+
+
+valueHelpTitleDescription=Select Description
