--- a/app/proconarumbills/webapp/i18n/i18n.properties
+++ b/app/proconarumbills/webapp/i18n/i18n.properties
@@ -18,5 +18,11 @@ changedBy=changedBy
 filterBarApprovedBy=Approved By
 approvedBy=approvedBy
 
+createExpenseRequest=Expense Request
+requestHeader=Request Header
+requestItems=Items
+requestAttachments=Attachments
+requestComments=Comments
+
 
 valueHelpTitleDescription=Select Description
