add item for detail page

--- a/app/proconarumbills/webapp/i18n/i18n.properties
+++ b/app/proconarumbills/webapp/i18n/i18n.properties
@@ -22,7 +22,8 @@ createExpenseRequest=Expense Request
 requestHeader=Request Header
 requestItems=Items
 requestAttachments=Attachments
-requestComments=Comments
-
+requesterNote=Requester Note
+requesterNoteContent=The note of requester
+commentOnDetailRequest=Comments on request
 
 valueHelpTitleDescription=Select Description
